--- a/wp-content/themes/malura/style.css
+++ b/wp-content/themes/malura/style.css
@@ -1,21 +1,156 @@
 /*
-Theme Name: Malura
-Text Domain: malura
-Version: 1.0
-Requires at least: 4.7
-Requires PHP: 5.2.4
-Description: Our default theme for 2020 is designed to take full advantage of the flexibility of the block editor. Organizations and businesses have the ability to create dynamic landing pages with endless layouts using the group and column blocks. The centered content column and fine-tuned typography also makes it perfect for traditional blogs. Complete editor styles give you a good idea of what your content will look like, even before you publish. You can give your site a personal touch by changing the background colors and the accent color in the Customizer. The colors of all elements on your site are automatically calculated based on the colors you pick, ensuring a high, accessible color contrast for your visitors.
-Tags: blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
-Author: Alexsandro Silva 
-Author URI: https://wordpress.org/
-Theme URI: https://wordpress.org/themes/twentytwenty/
+Theme Name: Maluras
+Theme URI: 
+Author: Yuri Padilha
+Author URI: http://www.caelum.com.br/;
+Description: Tema para imobiliária Maluras
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-
-All files, unless otherwise stated, are released under the GNU General Public
-License version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned
-with others.
+Tags: imobiliária, maluras
+Text Domain: maluras
 */
+
+html {
+	font-size: 16px;
+	height: 100%;
+}
+
+body {
+	height: 100%;
+	font-family: 'Open Sans', sans-serif;
+	color: #747474;
+	-webkit-font-smoothing: antialiased;
+}
+
+.chamada-principal {
+	margin: 2rem 0;
+}
+
+.chamada-principal h1 {
+	font-size: 2.5rem;
+	font-weight: bold;
+}
+
+.chamada-principal p {
+	font-size: 2rem;
+}
+
+.container {
+	width: 1024px;
+	margin: 0 auto;
+}
+
+/* Index */
+
+.home-main {
+	background-color: #F4F4F4;
+}
+
+.imoveis-listagem {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	padding-top: 2rem;
+}
+
+.imoveis-listagem-item {
+	flex-basis: 30%;
+	margin-bottom: 1.5rem;
+}
+
+.imoveis-listagem-item:not( :nth-child(3n) ) {
+	margin-right: 5%;
+}
+
+.imoveis-listagem-item a {
+	display: block;
+	text-decoration: none;
+	color: #000;
+}
+
+.imoveis-listagem-item img {
+	max-width: 100%;
+	height: 250px;
+}
+
+.imoveis-listagem-item h2 {
+	font-size: 2rem;
+	font-weight: bold;
+	margin: 1rem 0;
+	color: #333;
+}
+
+.imoveis-listagem-item p {
+	font-size: .9rem;
+	line-height: 1.5;
+}
+
+.busca-localizacao-form {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem 0;
+	flex-basis: 100%;
+}
+
+/* single */
+
+.single-imovel {
+	margin-bottom: 2rem;
+}
+
+.single-imovel-thumbnail img {
+	width: 100%;
+	max-height: 500px;
+}
+
+.single-imovel p {
+	font-size: 1rem;
+	line-height: 2;
+}
+
+.single-imovel-data {
+	display: block;
+	font-size: 1.1rem;
+	color: #888;
+	margin-top: 1rem;
+	font-style: italic;
+}
+
+.single-imovel-geral {
+	display: flex;
+}
+
+.single-imovel-descricao {
+	flex-basis: 80%;
+}
+
+.single-imovel-informacoes {
+	flex-basis: 20%;
+	margin-left: 5%;
+	border: 1px solid #000;
+	border-radius: 5px;
+	padding: 1rem;
+}
+
+.single-imovel-informacoes dt {
+	font-weight: 700;
+	font-size: 1.2rem;
+	margin-bottom: .8rem;
+}
+
+.single-imovel-informacoes dt:not(:first-child) {
+	margin-top: .8rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
